@@ -546,12 +546,13 @@ $app_config['power_user']['last_trade_cache_time'] = 4; // (default = 4)
 $app_config['power_user']['chainstats_cache_time'] = 70; // Minutes to cache blockchain stats (for mining calculators). Set high initially, it can be strict
 
 
-// Minutes to cache RSS feeds (for News page)
-// This time will automatically vary randomly up to 35 minutes EXTRA, to avoid all feeds updating at the same time (which slows page loads significantly)
-$app_config['power_user']['rss_feed_cache_time'] = 70; 
-
-
 $app_config['power_user']['marketcap_cache_time'] = 40; // Minutes to cache marketcap rankings...start high and test lower, it can be strict
+
+
+// Minutes to cache RSS feeds (for News page)
+// Randomly cache each RSS feed between the minimum and maximum minutes set here (so they don't refresh all at once, for faster load times)
+// THE WIDER THE GAP BETWEEN THE NUMBERS, MORE SPLIT UP / FASTER THE FEEDS WILL LOAD
+$app_config['power_user']['rss_cache_time_min_max'] = '50,125'; // 'min,max' (default = '50,125')
 
 
 // Number of marketcap rankings to request from API.
