@@ -1580,7 +1580,6 @@ $obfuscated_url_data = obfuscated_url_data($api_endpoint); // Automatically remo
 		
 			if ( isset($fallback_cache_data) ) {
 			$store_file_contents = touch($base_dir . '/cache/secured/external_api/'.$hash_check.'.dat');
-			//$store_file_contents = store_file_contents($base_dir . '/cache/secured/external_api/'.$hash_check.'.dat', $api_runtime_cache[$hash_check]);
 			}
 			else {
 			$store_file_contents = store_file_contents($base_dir . '/cache/secured/external_api/'.$hash_check.'.dat', $api_runtime_cache[$hash_check]);
@@ -1589,7 +1588,6 @@ $obfuscated_url_data = obfuscated_url_data($api_endpoint); // Automatically remo
 		
 			if ( $store_file_contents == false && isset($fallback_cache_data) ) {
 			app_logging('ext_api_error', 'Cache file touch() error for ' . ( $mode == 'array' ? 'server at ' : 'endpoint at ' ) . $obfuscated_url_data, 'data_size_bytes: ' . strlen($api_runtime_cache[$hash_check]) . ' bytes');
-			//app_logging('ext_api_error', 'Cache file write error for ' . ( $mode == 'array' ? 'server at ' : 'endpoint at ' ) . $obfuscated_url_data, 'data_size_bytes: ' . strlen($api_runtime_cache[$hash_check]) . ' bytes');
 			}
 			elseif ( $store_file_contents == false && !isset($fallback_cache_data) ) {
 			app_logging('ext_api_error', 'Cache file write error for ' . ( $mode == 'array' ? 'server at ' : 'endpoint at ' ) . $obfuscated_url_data, 'data_size_bytes: ' . strlen($api_runtime_cache[$hash_check]) . ' bytes');
