@@ -137,27 +137,21 @@ function decred_api($type, $request) {
  
 global $app_config, $runtime_mode;
 
-	if ( $runtime_mode != 'ui' ) {
-	return false;  // We only use the block reward config file call for UI data, can skip the API request if not running the UI.
-	}
- 	else {
+
+ 	if ( $type == 'block' ) {
+ 	$json_string = 'https://explorer.dcrdata.org/api/block/best/verbose';
+ 	}
+	elseif ( $type == 'subsidy' ) {
+ 	$json_string = 'https://explorer.dcrdata.org/api/block/best/subsidy';
+ 	}
+
  		
- 		if ( $type == 'block' ) {
- 		$json_string = 'https://explorer.dcrdata.org/api/block/best/verbose';
- 		}
- 		elseif ( $type == 'subsidy' ) {
- 		$json_string = 'https://explorer.dcrdata.org/api/block/best/subsidy';
- 		}
- 		
- 		$jsondata = @external_api_data('url', $json_string, $app_config['power_user']['chainstats_cache_time']);
+$jsondata = @external_api_data('url', $json_string, $app_config['power_user']['chainstats_cache_time']);
   		
-  		$data = json_decode($jsondata, true);
+$data = json_decode($jsondata, true);
    	 
-		return $data[$request];
+return $data[$request];
 			  
-			
-	}
-  
 }
 
 
